<resources>
    <string name="app_name">Blue Ocean Goodies (Canary)</string>
    <string name="Createacc"><![CDATA[Register & Login]]></string>
    <string name="Concent">By Clicking this Button I have accepted and Read the User Agreement and Privacy Policy.</string>
    <string name="CPass">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="User">Username</string>
    <string name="register">Create an account</string>
    <string name="subtext">Don\'t have an account? Create your Account, it takes less then a minute</string>
    <string name="BG">App Logo</string>
    <string name="robot_question">Seems Suspicious, Are You a Robot?</string>
    <string name="sbtext">If not a robot please enter the code below.</string>
    <string name="ccode" />
    <string name="input">Enter Captcha code</string>
    <string name="Verify">Verify</string>
    <string name="homein">Login</string>
    <string name="homereg">Create an account</string>
    <string name="Umail">Username or Email</string>
    <string name="Fpw">Forgot Password?</string>
    <string name="hatdog">hatdog</string>
    <string name="recommended">Recommended</string>
    <string name="Uname">Hi, Harleyyyu!</string>
    <string name="oae"><![CDATA[Order & Eat]]></string>
    <string name="Search">Search</string>
    <string name="categ">Category</string>
    <string name="Sd1">Grilled Tuna Belly</string>
    <string name="desc">Tuna belly is perfect for grilling. This grilled tuna belly <br>recipe is easy to follow and the result is great.</br> You should be enjoying your tasty and delicious tuna belly after a few hours of preparation.</string>
    <string name="b1">BUY NOW</string>
    <string name="b2">ADD TO LIST</string>
    <string name="mpp1">P 178</string>
    <string name="info">Description</string>
    <string name="BN">Buy Now</string>
    <string name="adc">Add to Cart</string>
    <string name="seller">Ginger\'s Cookery</string>
    <string name="visitstore">Visit Store</string>
    <string name="goombastore">Goomba Store</string>
    <string name="maindish">Main Dish</string>
    <string name="Sd2">Grilled Salmon with Butter sauce</string>
    <string name="mpp2">P 100</string>
    <string name="desc2">Grilled Salmon with garlic lime butter is flaky, juicy, and <br> cooked to perfection with crispy salmon skin. Brushing on </br> the flavored butter makes each bite irresistible. We’re sharing our best tips for cooking salmon on the grill so it doesn’t stick.</string>
    <string name="sidedish">Side Dish</string>
    <string name="Drinks">Drinks</string>
    <string name="dessert">Dessert</string>
    <string name="Side1">Garlic Butter Shrimp</string>
    <string name="sdp1">P 200</string>
    <string name="sddesc">This easy Garlic Butter Shrimp recipe is so delicious! It’s got garlic, it’s got lemon juice, it’s got a chili pepper paste to give it some spice it’s gotit all! And it’s such an easy thing to make since the garlic shrimp cooks so fast.</string>
    <string name="sddesc2">When we want something light and healthful to eat for dinner, we adore this recipe. For a complete supper, I combine it with a small amount of grilled chicken. However, if you\'re a vegetarian or simply want a meatless lunch now and again, it\'s also wonderful served over rice or Asian noodles.</string>
    <string name="sdp2">P 150</string>
    <string name="Side2">Asian Vegetable Stir Fry</string>
    <string name="des1">Boba MilkTea Cupcakes</string>
    <string name="desp1">P 20</string>
    <string name="desdesc1">It’s a timeless treat to be enjoyed any season for any reason! Perfect for birthdays and celebrations of all sorts, these boba milk tea cupcakes are sure to be a hit. These cupcakes are flavored by the tea infused butter and tea infused milk.</string>
    <string name="desdesc2">A triple berry pie wrapped up in an ultra-flaky flavorful gluten-free crust laced with vanilla and cardamom. Perfect for summer\'s fresh ripe fruit and just as good in the winter with a bag of your favorite frozen berries!Best served with vanilla ice cream on top!</string>
    <string name="des2">Berry Pie</string>
    <string name="desp2">P 100</string>
    <string name="drp1">P 50</string>
    <string name="dr1">Strawberry Water</string>
    <string name="drdesc1">Strawberry Water! This delicious flavored water has the essence of that red berry and my, is it refreshing! Make a big pitcher and you can sip off of it for days: or it’s perfect for summer entertaining.</string>
    <string name="dr2">Mango Mojito</string>
    <string name="drp2">P 70</string>
    <string name="drdesc2">Mango Mojito is a light and refreshing Cuban-style cocktail, where mango puree is mixed with club soda, lemon juice mint leaves, sugar, white rum, and ice cubes. There is a very subtle spicy kick from the jalapeno in this drink.</string>
    <string name="userico">User</string>
    <string name="usertab">Account</string>
    <string name="username">Harleyyyu</string>
    <string name="mail">Harleyyyu@htthq.com</string>
    <string name="dj">Joined: May 20, 2022</string>
    <string name="number">Contact</string>
    <string name="pnum">+639332549912</string>
    <string name="country">Country</string>
    <string name="cph">PH</string>
    <string name="Logout">Logout</string>
    <string name="orderverif">Order Verified!</string>
    <string name="orverif_wait">Your Order is Being Made. Please wait while we Prepare and Deliver your food.</string>
    <string name="sa">Shop Again</string>
    <string name="total_prize">Total Prize:</string>
    <string name="next">NEXT</string>
    <string name="Str1">READY TO BUY!!!</string>
    <string name="Tx1">Total:</string>
    <string name="Tx2">Php 0</string>
    <string name="Tx3">Delivery Service:</string>
    <string name="Tx4">Tax:</string>
    <string name="todo">TODO</string>
    <string name="ChO">Check out</string>
    <string name="todo2">TODO</string>
    <string name="Cart">Cart</string>
    <string name="st">Sub Total:</string>
    <string name="dfee">Delivery Fee:</string>
    <string name="tax">Tax (%):</string>
    <string name="subprice">P 0.00</string>
    <string name="divprice">P 0.00</string>
    <string name="pricetax">P 0.00</string>
    <string name="totalprice">P 0.00</string>
</resources>