<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newuser">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/BG" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C9353637"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="328dp"
            android:layout_height="59dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/inputlyr"
            android:hint="@string/User"
            android:textColorHint="@color/light"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconTint="@color/light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputnum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputlyr"
                android:textColor="@color/white"
                android:textColorHint="#FAFAFA"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="328dp"
            android:layout_height="59dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputlyr"
            android:hint="@string/Email"
            android:textColorHint="@color/light"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:startIconTint="@color/light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputnum2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputlyr"
                android:textColor="@color/white"
                android:textColorHint="#FAFAFA"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="328dp"
            android:layout_height="59dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputlyr"
            android:hint="@string/Password"
            android:textColorHint="@color/light"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:startIconTint="@color/light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputnum3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputlyr"
                android:textColor="@color/white"
                android:textColorHint="#FAFAFA"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="328dp"
            android:layout_height="59dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/inputlyr"
            android:hint="@string/CPass"
            android:textColorHint="@color/light"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:startIconTint="@color/light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputnum4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputlyr"
                android:textColor="@color/white"
                android:textColorHint="#FAFAFA"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="329dp"
            android:layout_height="51dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/Concent"
            android:textAlignment="textStart"
            android:textColor="#FDFDFD"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="308dp"
            android:layout_height="52dp"
            android:background="@drawable/btn1"
            android:fontFamily="sans-serif"
            android:text="@string/Createacc"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintVertical_bias="0.57" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="329dp"
            android:layout_height="42dp"
            android:text="@string/subtext"
            android:textColor="#D6D4D4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>