<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/BG" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C9353637"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bgc"
            android:contentDescription="@string/BG"
            app:layout_constraintBottom_toTopOf="@+id/homelogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.266" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="328dp"
            android:layout_height="59dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/inputlyr"
            android:hint="@string/Umail"
            android:textColorHint="@color/light"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:startIconTint="@color/light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputnum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputlyr"
                android:textColor="@color/white"
                android:textColorHint="#FAFAFA"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="328dp"
            android:layout_height="59dp"
            android:background="@drawable/inputlyr"
            android:hint="@string/Password"
            android:textColorHint="@color/light"
            app:hintTextColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/homelogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.100000024"
            app:startIconTint="@color/light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputnum2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/inputlyr"
                android:textColor="@color/white"
                android:textColorHint="#FAFAFA"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/homelogin"
            android:layout_width="308dp"
            android:layout_height="52dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn1"
            android:fontFamily="sans-serif"
            android:text="@string/homein"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/homereg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/homereg"
            android:layout_width="308dp"
            android:layout_height="52dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn1"
            android:fontFamily="sans-serif"
            android:text="@string/homereg"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fpw"
            android:textColor="#CFD8DC"
            app:layout_constraintBottom_toTopOf="@+id/homelogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.859"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>